affiliation mobile: fixed mobile type list colors

--- a/static_in_pro/our_static/css/affiliation_types.css
+++ b/static_in_pro/our_static/css/affiliation_types.css
@@ -47,10 +47,10 @@ div#mobile_types_list ul li:first-child {
     padding-top: 10px;
 }
 
-#mobile_types_list ul li:hover {
-    opacity: 0.7;
-    color: rgb(230, 89, 42) !important;
-}
+/*#mobile_types_list ul li:hover {*/
+    /*opacity: 0.7;*/
+    /*color: rgb(230, 89, 42) !important;*/
+/*}*/
 
 .type_button {
     /* so checkbox position will be determined according to type_button */
